# Monad-Lisa

./: .gitignore  README.md
monad-lisa/: LICENSE  monad-lisa.cabal  stack.yaml
monad-lisa/app/: Main.hs
monad-lisa/extra/: benchmark.xlsx
monad-lisa/kd/: monad_lisa.kd  test.kd  zombie_lisa.kd
monad-lisa/src/: Evaluator.hs  ImageParser.hs  ImageTransformation.hs  ParserCombinators.hs
monad-lisa/test/: Spec.hs
