name:                monad-lisa
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/monad-lisa#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser
                       , ParserCombinators
                       , ImageTransformation
                       , Evaluator
                       , ImageParser
  build-depends:       base >= 4.7 && < 5
                       , JuicyPixels
                       , repa
                       , JuicyPixels-repa
                       , HUnit
                       , QuickCheck
                       , containers
  default-language:    Haskell2010

executable monad-lisa-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3
  build-depends:       base
                     , monad-lisa
  default-language:    Haskell2010

test-suite monad-lisa-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , monad-lisa
                     , HUnit
                     , containers
                     , QuickCheck
                     , JuicyPixels
                     , repa
                     , repa-algorithms
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/monad-lisa
